.node_modules/syntax-error/test/sources/spread.js
var a = { ...b }
;({ d, ...e } = a)
